assets/css/style.css
/* Import google fonts, Hind and Rudo family-font */
@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&family=Ruda:wght@400..900&display=swap');

/* Override default styles induced by the browser */
/* This step is taken from the CI walkthrought project instruction */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}


body {
    /* This step is taken from the CI walkthrought project instruction*/
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: #011C2A;
    font-family: 'Hind', sans-serif;
}

/* Header style goes here */
header {
    background-color: #fff;
}

.header-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 12vh;
    margin: 0px 5px 0px 5px;

}

.hdr-subcontainer-1 {
    background: url('../images/logo.webp');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    align-self: center;
    height: 4.5rem;
    width: 4.5rem;
}

.hdr-subcontainer-2 {
    flex-basis: 30%;
    min-height: 90px;
}

.hdr-subcontainer-3 {
    flex-basis: 10%;
    font-size: 80%;
}

.hdr-subcontainer-2 h1 {
    font-size: 200%;
    text-align: center;
}

.hdr-subcontainer-2 h2 {
    font-size: 100%;
    line-height: 100%;
    text-align: center;
}

#menu {
    list-style-type: none;
    letter-spacing: 3px;
    padding-left: 20px;
    font-size: 100%;
    font-weight: 900;
    height: 70px;
}

a {
    text-decoration: none;
    color: #011C2A;
}

/* Navbar code adopted from Love Running project with customization */

nav {
    position: absolute;
    left: 0;
    top: 5.4rem;
    background-color: #fff;
    width: 100%;
    display: none;
}

#toggle:checked~nav {
    display: block;
}

#toggle {
    display: none;
}

.humberger-icon {
    font-size: xxx-large;
}

.active {
    border-bottom: 2px solid #011C2A;
}

/* Main style goes here */
main {
    background-color: #011C2A;
    width: 100vw;
    /* Allow the main element to span most of the page */
    /* This step is taken from the CI walkthrought project instruction*/
    flex: 1 0 auto;
    margin-top: 10px;
}

/* Sections style of the main content of the home page goes here */
/* The design idea of the first section is inspired by CI's student
project Dhadda's Detailing: https://rdhadda.github.io/Dhaddas-Detailing/index.html */

.home-hero {
    border: 1px solid #011C2A;
    background: url('../images/home.webp');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    /* Make the section style responsive to multiple screen sizes */
    display: flex;
    align-items: flex-end;
}

.home-hero-title {
    border: 1px solid #011C2A;
    background-color: rgba(1, 28, 42, .55);
    color: #fff;
    height: 3rem;
    width: 15rem;
    text-transform: uppercase;
    /* Allow the subcontainer position to adjust to the screen size */
    position: absolute;
    left: 8vw;
    top: 55vh;
}


.process-profile {
    display: flex;
    border: 1px solid #011C2A;
    /* allow for responsiveness */
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
}

.process-profile__traditional {
    border: 1px solid #011C2A;
    margin: 5px;
    background-color: #011C2A;
    color: #fff;
    width: 700px;
    height: 200px;
    font-size: 90%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.process-profile__traditional--image {
    border: 1px solid #011C2A;
    margin: 5px;
    width: 700px;
    height: 300px;
    background: url('../images/traffic-signs.webp');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.process-profile__traditional--list {
    border: 1px solid #fff;
    list-style-type: none;
    width: 270px;
    line-height: .8rem;
    margin-top: .5rem;
    margin-left: 1.5rem;
    font-size: 80%;
}

.process-profile__traditional--list li {
    display: flex;
    align-items: center;
    margin: 10px;
}

.process-profile__traditional--list li img {
    width: 15px;
    height: 15px;
    margin-right: 10px;
}

h4 {
    text-align: justify;
    margin-top: .5rem;
    margin-bottom: .25rem;
    line-height: 1.3rem;
    font-size: 100%;
}

.process-profile__contemporary {
    border: 1px solid #011C2A;
    margin: 5px;
    background-color: #011C2A;
    color: #fff;
    width: 700px;
    height: 250px;
    font-size: 90%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.process-profile__contemporary--image {
    border: 1px solid #011C2A;
    margin: 5px;
    width: 700px;
    height: 300px;
    background: url('../images/avatar.webp');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.process-profile__contemporary--list {
    border: 1px solid #fff;
    list-style-type: none;
    width: 270px;
    line-height: .8rem;
    margin-top: .5rem;
    margin-left: 1.5rem;
    font-size: 80%;
}

.process-profile__contemporary--list li {
    display: flex;
    align-items: center;
    margin: 10px;
}

.process-profile__contemporary--list li img {
    width: 15px;
    height: 15px;
    margin-right: 10px;
}

/* Sections style of the main content of the plans page goes here */
/* The design idea of the first section is inspired by CI's student
project Dhadda's Detailing: https://rdhadda.github.io/Dhaddas-Detailing/index.html */

.plans-hero {
    border: 1px solid #011C2A;
    background: url('../images/plans.webp');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    /* Make the section style responsive to multiple screen sizes */
    display: flex;
    align-items: flex-end;
}

.plans-hero-title {
    border: 1px solid #011C2A;
    background-color: rgba(1, 28, 42, .55);
    color: #fff;
    height: 3rem;
    width: 15rem;
    text-transform: uppercase;
    /* Allow the subcontainer position to adjust to the screen size */
    position: absolute;
    left: 8vw;
    top: 55vh;
}

.plans-subscription {
    display: flex;
    border: 1px solid #011C2A;
    margin-top: 2rem;
    /* allow for responsiveness */
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
}

.plans-subscription__terms {
    border: 1px solid #011C2A;
    margin: 5px;
    background-color: #011C2A;
    color: #fff;
    width: 700px;
    height: 250px;
    font-size: 90%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.plans-subscription__terms--list {
    border: 1px solid #fff;
    list-style-type: none;
    width: 270px;
    line-height: .8rem;
    margin-top: .5rem;
    margin-left: 1.5rem;
    font-size: 80%;
}

.plans-subscription__terms--list li {
    display: flex;
    align-items: center;
    margin: 10px;
}

.plans-subscription__terms--list li img {
    width: 15px;
    height: 15px;
    margin-right: 10px;
}

.plans-subscription__form {
    border: 1px solid #011C2A;
    margin: 5px;
    width: 700px;
    height: 300px;
    background: url('../images/traffic-signs.webp');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
}

.subscription-form {
    background-color: rgba(1, 28, 42, .95);
}

/* This step supports the next selector purpose */
.div-radio {
    width: 12rem;
}

/* This step is meant to fix the unequal gaps between the
the three radio buttons and the three labels, aiming to
unify the distace */
/* The first three lines of this step is adopted from the following
youtube video: https://www.youtube.com/watch?v=rTxeucqOajI */

.subscription-form-label {
display: block;
display: flex;
align-items: center;
justify-content: space-between;
}

/* Sections style of the main content of the contact page goes here */
/* The design idea of the first section is inspired by CI's student
project Dhadda's Detailing: https://rdhadda.github.io/Dhaddas-Detailing/index.html */

.contact-hero {
    border: 1px solid #011C2A;
    background: url('../images/welcome.webp');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    /* Make the section style responsive to multiple screen sizes */
    display: flex;
    align-items: flex-end;
}

.contact-hero-title {
    border: 1px solid #011C2A;
    background-color: rgba(1, 28, 42, .55);
    color: #fff;
    height: 3rem;
    width: 15rem;
    text-transform: uppercase;
    /* Allow the subcontainer position to adjust to the screen size */
    position: absolute;
    left: 8vw;
    top: 55vh;
}

.contact {
    display: flex;
    flex-direction: column;
    border: 1px solid #011C2A;
    background-color: #011C2A;
    margin-top: 2rem;
    /* allow for responsiveness */
    justify-content: space-evenly;
    align-items: center;
}


/* Contact form style goes here */
/* Adopted from the CI walkthrough project */
.contact-form {
    border: .5px solid #fff;
    width: 250px;
    font-size: 100%;
    margin: 2px 2px 2px 2px;
    padding: 5px 10px 5px 25px;
    border-radius: 3px;
    color: rgba(255, 255, 255, 0.9);
}

.contact-form__label {
    margin-bottom: 15rem;
    padding-right: 5px;
}

.text-input {
    border: 1px solid #fff;
    width: 12rem;
    margin-bottom: 10px;
    border-radius: 3px;
    background: #fff;
}

.contact-button {
    background-color:#011C2A;
    border: .5px solid #fff;
    padding: 5px 15px 5px 15px;
    cursor: pointer;
    color: #ffffff;
    font-size: 100%;
}

.contact-form > h4 {
    margin-left: 1rem;
    margin-right: 1rem;
}

#message {
    height: 60px;
}

/* Footer style goes here */
footer {
    background-color: #011C2A;
    color: #fff;
    width: 100vw;
    height: 15vh;
}

.footer-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

.footer-subcontainer-1 {
    list-style-type: none;
    display: flex;
    height: 8vh;
    width: 80%;
    justify-content: space-between;
    align-items: flex-end;

}

.footer-subcontainer-2 {
    font-size: 10px;
}

.social-media-icon {
    color: #fff;
    font-size: xx-large;

}

.footer-subcontainer-1 ul li {
    margin-right: 2rem;
}

/* Breakpoint critieria: media query for 430px and up */
/* This is to position the toggle nav properly when the screen is equal 
or bigger than 430px */
@media screen and (min-width: 430px) {

    nav {
        top: 6.8rem;
    }
    
}
/* Breakpoint critieria: media query for 768px and up */
@media screen and (min-width: 768px) {
    /* change the header-container to flex column to show the menu horizontally */

    nav {
        display: block;
        position: relative;
        top: 0;
        font-size: 160%;

    }

    #menu {
        display: flex;
        padding-left: 0;
        width: 16rem;
    }

    .toggle-label {
        display: none;
    }

    #menu li {
        padding-right: 2rem;
    }

    .header-container {
        justify-content: space-around;
    }

    /* Change footer-subcontainers width to decrease the distance between social media icons
and increase the font size of disclaimer */

    .footer-subcontainer-1 {
        width: 40%;
    }

    .footer-subcontainer-2 {
        font-size: 15px;
    }

    /* Reverse subcontainer positions in bigger screens for better contrast */

    .section-container-2 {
        flex-direction: row-reverse;
    }

    /* style the contact form for larger screens */
    .contact__form {
        border: .5px solid #fff;
        width: 500;
        font-size: 100%;
        margin: 2px 2px 2px 2px;
        padding: 5px 10px 5px 25px;
    }

}

